Add toast ui image editor

--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
-  "name": "<plugin_name_goes_here>",
-  "author": "<author_name_goes_here>",
+  "name": "rclone-photo-editor",
+  "author": "negative0",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "homepage": "./",
   "rclone": {
-    "handleType": [],
-    "pluginType": "DASHBOARD"
+    "handleType": ["image/bmp", " image/jpeg", "image/png", "image/svg+xml", "image/svg", "image/webp"],
+    "pluginType": "FILE_HANDLER"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@toast-ui/react-image-editor": "^1.2.0",
+    "axios": "^0.20.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
