Fix handlesType in package.json

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": false,
   "homepage": "./",
   "rclone": {
-    "handleType": ["image/bmp", " image/jpeg", "image/png", "image/svg+xml", "image/svg", "image/webp"],
+    "handlesType": ["image/bmp", " image/jpeg", "image/png", "image/svg+xml", "image/svg", "image/webp"],
     "pluginType": "FILE_HANDLER"
   },
   "dependencies": {
