--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
   "name": "rclone-photo-editor",
   "author": "negative0",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "private": false,
   "homepage": "./",
   "rclone": {
-    "handlesType": ["image/bmp", " image/jpeg", "image/png", "image/svg+xml", "image/svg", "image/webp"],
+    "handlesType": [
+      "image/bmp",
+      "image/jpeg",
+      "image/png",
+      "image/svg+xml",
+      "image/svg",
+      "image/webp"
+    ],
     "pluginType": "FILE_HANDLER"
   },
   "dependencies": {
@@ -19,6 +26,7 @@
     "react-scripts": "3.4.1"
   },
   "devDependencies": {
+    "canvas": "^2.6.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.5.0"
@@ -43,6 +51,16 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx}",
+      "src/**/**/.{js,jsx}",
+      "!**/node_modules/**",
+      "!**/*index.js",
+      "!src/serviceWorker.js",
+      "!src/polyfill.js"
     ]
   }
 }
